--- a/styles.css
+++ b/styles.css
@@ -1,172 +1,176 @@
 html {
-    height: 100%;
+	height: 100%;
 }
 
 body {
-    font-family: Arial, serif;
-    font-size: 32px;
-    line-height: 1.1;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	font-family: Arial, serif;
+	font-size: 32px;
+	line-height: 1.1;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 div, p {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .container {
-    max-width: 1024px;
-    margin: auto;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+	max-width: 1024px;
+	margin: auto;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .header {
-    width: 100%;
+	width: 100%;
 }
 
 .header h1 {
-    margin-top: 50px;
-    font-size: 50px;
-    margin-bottom: 50px;
-    text-align: center;
-    font-weight: 500;
+	margin-top: 50px;
+	font-size: 50px;
+	margin-bottom: 50px;
+	text-align: center;
+	font-weight: 500;
 }
 
 .hero {
-    background-color: #ececec;
-    padding: 40px;
-    flex: 1 auto;
+	background-color: #ececec;
+	padding: 40px;
+	flex: 1 auto;
 }
 
 .header, .footer {
-    flex: none;
+	flex: none;
 }
 
 .indicator, .indicator-temp {
-    font-size: 40px;
-    display: inline-block;
-    background-color: #c0c0c0;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    border-radius: 15px;
-    padding: 15px 15px 50px;
-    position: relative;
-    vertical-align: top;
+	font-size: 40px;
+	display: inline-block;
+	background-color: #c0c0c0;
+	margin-bottom: 20px;
+	margin-right: 20px;
+	border-radius: 15px;
+	padding: 15px 15px 50px;
+	position: relative;
+	vertical-align: top;
 }
 
 .indicator-temp {
-    padding: 15px;
-    min-width: 200px;
+	padding: 15px;
+	min-width: 200px;
 }
 
 .indicator::before {
-    content: ' ';
-    background-color: #39b54a;
-    height: 30px;
-    position: absolute;
-    width: 100%;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    left: 0;
-    bottom: 0;
-    text-align: center;
+	content: ' ';
+	background-color: #39b54a;
+	height: 30px;
+	position: absolute;
+	width: 100%;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+	left: 0;
+	bottom: 0;
+	text-align: center;
 }
 
 .indicator-temp::before {
-    content: ' ';
-    display: block;
-    height: 70px;
-    width: 100%;
-    position: absolute;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
+	content: ' ';
+	display: block;
+	height: 70px;
+	width: 100%;
+	position: absolute;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+	right: 0;
+	bottom: 0;
+	z-index: 0;
 }
 
 .indicator.is-not-ok::before {
-    background-color: #ed145b;
+	background-color: #ed145b;
 }
 
 .indicator.is-ok::before {
 
-    background-color: #39b54a;
+	background-color: #39b54a;
 }
 
 .indicator-temp.is-ok::before {
-     background: linear-gradient(to right, #737373 0%, #737373 80%, #39b54a 80%, #39b54a 100%);
+	background: linear-gradient(to right, #737373 0%, #737373 80%, #39b54a 80%, #39b54a 100%);
 }
 
 .indicator-temp.is-not-ok::before {
-    background: linear-gradient(to right, #737373 0%, #737373 80%, #ed145b 80%, #ed145b 100%);
+	background: linear-gradient(to right, #737373 0%, #737373 80%, #ed145b 80%, #ed145b 100%);
 }
 
 .indicator-temp .temp-value {
-    margin-top: 10px;
-    margin-right: 30px;
-    color: white;
-    position: relative;
-    white-space: nowrap;
+	margin-top: 10px;
+	margin-right: 30px;
+	color: white;
+	position: relative;
+	white-space: nowrap;
 }
 
 .top-controls {
-    text-align: center;
-    margin-top: 25px;
-    margin-bottom: 75px;
+	text-align: center;
+	margin-top: 25px;
+	margin-bottom: 75px;
 }
 
 .controls-row {
-    margin-bottom: 30px;
-    text-align: center;
+	margin-bottom: 30px;
+	text-align: center;
 }
 
 .footer {
-    padding: 40px;
+	padding: 40px;
 }
 
 .system-logs {
-    height: 250px;
-    background-color: #555555;
-    color: #47a452;
-    padding: 20px;
-    overflow-y: auto;
-    font-size: 20px;
+	height: 250px;
+	background-color: #555555;
+	color: #47a452;
+	padding: 20px;
+	overflow-y: auto;
+	font-size: 20px;
 }
 
-.system-logs p {
-    padding: 0;
-    font-size: 28px;
-    margin: 0 0 10px;
+.system-logs {
+	padding: 10px;
+	font-size: 28px;
 }
 
 .switchers-row {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 .control {
-    width: 200px;
+	width: 200px;
 }
 
 .control label {
-    text-align: center;
-    font-size: 40px;
-    display: block;
+	text-align: center;
+	font-size: 40px;
+	display: block;
 }
 
-.control input {
-    display: none;
+.control button {
+	border: none;
+}
+
+.control button:active {
+	background-color: #555555;
+	box-shadow: 5px 5px 15px -5px black;
 }
 
 .control .indicator {
-    margin-top: 15px;
-    width: 100%;
+	margin-top: 15px;
+	width: 100%;
 }
 
 
